forgot to add IP Server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       DB_DATABASE: ${DB_DATABASE}
       API_AUTH: ${API_AUTH}
       API_GAME: ${API_GAME}
+      IP_SERVER: ${IP_SERVER}
     ports:
       - 28003:28003
       - 28004:28004
