--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,29 +4,30 @@ services:
   s4lauth:
     image: dera99/s4lauth:latest
     environment:
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_DATABASE: ${DB_DATABASE}
-      API_AUTH: ${API_AUTH}
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_DATABASE: ${{ secrets.DB_DATABASE }}
+      API_AUTH: ${{ secrets.API_AUTH }}
     ports:
       - 28001:28001
       - 28002:28002
       - 27000:27000
     networks:
       - s4lnetwork
+
   s4lgame:
     image: dera99/s4lgame:latest
     environment:
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_DATABASE: ${DB_DATABASE}
-      API_AUTH: ${API_AUTH}
-      API_GAME: ${API_GAME}
-      IP_SERVER: ${IP_SERVER}
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_DATABASE: ${{ secrets.DB_DATABASE }}
+      API_AUTH: ${{ secrets.API_AUTH }}
+      API_GAME: ${{ secrets.API_GAME }}
+      IP_SERVER: ${{ secrets.IP_SERVER }}
     ports:
       - 28003:28003
       - 28004:28004
