--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,6 +41,27 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/s4lgame:latest
           EOF
 
+      - name: Export environment variables
+        run: |
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> $GITHUB_ENV
+          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> $GITHUB_ENV
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
+          echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> $GITHUB_ENV
+          echo "API_AUTH=${{ secrets.API_AUTH }}" >> $GITHUB_ENV
+          echo "API_GAME=${{ secrets.API_GAME }}" >> $GITHUB_ENV
+          echo "IP_SERVER=${{ secrets.IP_SERVER }}" >> $GITHUB_ENV
+
       - name: Deploying
         run: |
-          docker-compose up -d
+          ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} << 'EOF'
+            export DB_HOST=${DB_HOST}
+            export DB_PORT=${DB_PORT}
+            export DB_USERNAME=${DB_USERNAME}
+            export DB_PASSWORD=${DB_PASSWORD}
+            export DB_DATABASE=${DB_DATABASE}
+            export API_AUTH=${API_AUTH}
+            export API_GAME=${API_GAME}
+            export IP_SERVER=${IP_SERVER}
+            docker-compose up -d
+          EOF
