--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,6 +28,10 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Copy docker-compose.yml to VPS
+        run: |
+          scp -o StrictHostKeyChecking=no -P ${{ secrets.SSH_PORT }} docker-compose.yml ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USERNAME }}/docker-compose.yml
+
       - name: Pulling Image
         run: |
           ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} << 'EOF'
@@ -41,27 +45,25 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/s4lgame:latest
           EOF
 
-      - name: Export environment variables
+      - name: Create .env file on server
         run: |
-          echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
-          echo "DB_PORT=${{ secrets.DB_PORT }}" >> $GITHUB_ENV
-          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> $GITHUB_ENV
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
-          echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> $GITHUB_ENV
-          echo "API_AUTH=${{ secrets.API_AUTH }}" >> $GITHUB_ENV
-          echo "API_GAME=${{ secrets.API_GAME }}" >> $GITHUB_ENV
-          echo "IP_SERVER=${{ secrets.IP_SERVER }}" >> $GITHUB_ENV
+          ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} << 'EOF'
+            echo "DB_HOST=${{ secrets.DB_HOST }}" > /home/dera.abdul/.env
+            echo "DB_PORT=${{ secrets.DB_PORT }}" >> /home/dera.abdul/.env
+            echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> /home/dera.abdul/.env
+            echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> /home/dera.abdul/.env
+            echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> /home/dera.abdul/.env
+            echo "API_AUTH=${{ secrets.API_AUTH }}" >> /home/dera.abdul/.env
+            echo "API_GAME=${{ secrets.API_GAME }}" >> /home/dera.abdul/.env
+            echo "IP_SERVER=${{ secrets.IP_SERVER }}" >> /home/dera.abdul/.env
+          EOF
 
       - name: Deploying
         run: |
           ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} << 'EOF'
-            export DB_HOST=${DB_HOST}
-            export DB_PORT=${DB_PORT}
-            export DB_USERNAME=${DB_USERNAME}
-            export DB_PASSWORD=${DB_PASSWORD}
-            export DB_DATABASE=${DB_DATABASE}
-            export API_AUTH=${API_AUTH}
-            export API_GAME=${API_GAME}
-            export IP_SERVER=${IP_SERVER}
-            docker-compose up -d
+            # Load environment variables from .env
+            set -o allexport; source /home/dera.abdul/.env; set +o allexport
+
+            # Run Docker Compose
+            docker-compose -f /home/dera.abdul/docker-compose.yml up -d
           EOF
