--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,35 @@
 version: "3.8"
 
-networks:
-  s4lnetwork:
-
 services:
   s4lauth:
+    container_name: s4lauth
     image: dera99/s4lauth:latest
-    environment:
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_DATABASE: ${DB_DATABASE}
-      API_AUTH: ${API_AUTH}
     ports:
-      - 28001:28001
-      - 28002:28002
-      - 27000:27000
+      - "28001:28001"
+      - "28002:28002"
+      - "27000:27000"
     networks:
       - s4lnetwork
+    volumes:
+      - /home/dera.abdul/AuthServer.hjson:/app/data/AuthServer.hjson
+    tty: true # Allocate a pseudo-TTY
+    stdin_open: true # Keep stdin open even if not attached
 
   s4lgame:
+    container_name: s4lgame
     image: dera99/s4lgame:latest
-    environment:
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_DATABASE: ${DB_DATABASE}
-      API_AUTH: ${API_AUTH}
-      API_GAME: ${API_GAME}
-      IP_SERVER: ${IP_SERVER}
     ports:
-      - 28003:28003
-      - 28004:28004
-      - 28005:28005
-      - 45000:45000
+      - "28003:28003"
+      - "28004:28004"
+      - "28005:28005"
+      - "45000:45000"
     networks:
       - s4lnetwork
+    volumes:
+      - /home/dera.abdul/GameServer.hjson:/app/data/GameServer.hjson
+    tty: true
+    stdin_open: true
+
+networks:
+  s4lnetwork:
+    external: true
