fix network issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - s4lnetwork
     volumes:
       - /home/dera.abdul/GameServer.hjson:/app/data/GameServer.hjson
+    depends_on:
+      - s4lauth
     tty: true
     stdin_open: true
 
