--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,9 +35,16 @@ jobs:
           ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} << 'EOF'
           cd /home/dera.abdul/s4league/config/
 
-          # Pull images with force removal (consider security implications)
-          docker pull --force-rm ${{ secrets.DOCKER_USERNAME }}/s4lauth:latest
-          docker pull --force-rm ${{ secrets.DOCKER_USERNAME }}/s4lgame:latest
+          # Remove old containers if they exist
+          docker stop s4lauth || true
+          docker rm s4lauth || true
+          docker stop s4lgame || true
+          docker rm s4lgame || true
 
+          # Pull the latest images
+          docker pull ${{ secrets.DOCKER_USERNAME }}/s4lauth:latest
+          docker pull ${{ secrets.DOCKER_USERNAME }}/s4lgame:latest
+
+          # Run Docker Compose
           docker-compose up -d
           EOF
